force-app/main/default/objects/NF_Form_Version__c/NF_Form_Version__c.object-meta.xml
<CustomObject>
    <description>Versioned publishable snapshot of a TwinaForms form.</description>
    <label>NF Form Version</label>
    <nameField>
        <displayFormat>VER-{0000}</displayFormat>
        <label>Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NF Form Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>