force-app/main/default/objects/NF_Form_Version__c/fields/Custom_CSS__c.field-meta.xml
<CustomField>
    <fullName>Custom_CSS__c</fullName>
    <description>Optional custom CSS source for the generated public form.</description>
    <inlineHelpText>Optional custom CSS.</inlineHelpText>
    <label>Custom CSS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>