force-app/main/default/objects/NF_Form_Version__c/fields/Custom_JS__c.field-meta.xml
<CustomField>
    <fullName>Custom_JS__c</fullName>
    <description>Optional custom JavaScript source for the generated public form.</description>
    <inlineHelpText>Optional custom JavaScript.</inlineHelpText>
    <label>Custom JS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>