force-app/main/default/objects/NF_Form_Version__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <description>Parent form for this version.</description>
    <inlineHelpText>Parent form record.</inlineHelpText>
    <label>Form</label>
    <referenceTo>NF_Form__c</referenceTo>
    <relationshipLabel>Form Versions</relationshipLabel>
    <relationshipName>FormVersions</relationshipName>
    <type>MasterDetail</type>
</CustomField>