force-app/main/default/objects/NF_Form_Version__c/fields/Form_Id__c.field-meta.xml
<CustomField>
    <fullName>Form_Id__c</fullName>
    <description>AWS/public form id used by generated HTML and Lambda.</description>
    <inlineHelpText>Stable form id used in AWS and public HTML.</inlineHelpText>
    <label>Form Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>