force-app/main/default/objects/NF_Form_Version__c/fields/Last_Publish_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Publish_Error__c</fullName>
    <description>Last publish failure summary.</description>
    <inlineHelpText>Last publish error details.</inlineHelpText>
    <label>Last Publish Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>