force-app/main/default/objects/NF_Form_Version__c/fields/Last_Published_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Published_At__c</fullName>
    <description>Datetime of the latest successful or attempted publish operation.</description>
    <inlineHelpText>Last published at.</inlineHelpText>
    <label>Last Published At</label>
    <type>DateTime</type>
</CustomField>