force-app/main/default/objects/NF_Form_Version__c/fields/Last_Published_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Published_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who last published this form version.</description>
    <inlineHelpText>Last published by.</inlineHelpText>
    <label>Last Published By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>NF Form Versions Last Published By</relationshipLabel>
    <relationshipName>NFFormVersionsLastPublishedBy</relationshipName>
    <type>Lookup</type>
</CustomField>