force-app/main/default/objects/NF_Form_Version__c/fields/Prefill_Params_JSON__c.field-meta.xml
<CustomField>
    <fullName>Prefill_Params_JSON__c</fullName>
    <description>Client-side prefill parameter mapping source JSON.</description>
    <inlineHelpText>Optional prefill params JSON.</inlineHelpText>
    <label>Prefill Params JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>