force-app/main/default/objects/NF_Form_Version__c/fields/Publish_Status__c.field-meta.xml
<CustomField>
    <fullName>Publish_Status__c</fullName>
    <description>Operational publish status for the version.</description>
    <inlineHelpText>Status of the latest publish attempt.</inlineHelpText>
    <label>Publish Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never Published</fullName>
                <default>true</default>
                <label>Never Published</label>
            </value>
            <value>
                <fullName>Publish Pending</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Publish Failed</fullName>
            </value>
            <value>
                <fullName>Unpublished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>