force-app/main/default/objects/NF_Form_Version__c/fields/Publish_Token__c.field-meta.xml
<CustomField>
    <fullName>Publish_Token__c</fullName>
    <description>Long-lived per-form publish token sent to AWS.</description>
    <inlineHelpText>Protected publish token used when generating the public form artifact.</inlineHelpText>
    <label>Publish Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>