force-app/main/default/objects/NF_Form_Version__c/fields/Rate_Limit_Profile__c.field-meta.xml
<CustomField>
    <fullName>Rate_Limit_Profile__c</fullName>
    <description>Reserved field for future AWS-side rate limit profile selection.</description>
    <inlineHelpText>Future rate limit profile for publish output.</inlineHelpText>
    <label>Rate Limit Profile</label>
    <length>80</length>
    <type>Text</type>
</CustomField>