force-app/main/default/objects/NF_Form_Version__c/fields/Security_Mode__c.field-meta.xml
<CustomField>
    <fullName>Security_Mode__c</fullName>
    <description>Security mode compiled into the AWS registration payload.</description>
    <inlineHelpText>Controls AWS-side execution restrictions for the form version.</inlineHelpText>
    <label>Security Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>public-create</fullName>
                <default>true</default>
                <label>Public Create</label>
            </value>
            <value>
                <fullName>public-prefill</fullName>
                <label>Public Prefill</label>
            </value>
            <value>
                <fullName>secure-edit</fullName>
                <label>Secure Edit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>