force-app/main/default/objects/NF_Form_Version__c/fields/Theme_JSON__c.field-meta.xml
<CustomField>
    <fullName>Theme_JSON__c</fullName>
    <description>Theme source JSON used to generate the public HTML artifact.</description>
    <inlineHelpText>Theme and look-and-feel JSON.</inlineHelpText>
    <label>Theme JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>