force-app/main/default/objects/NF_Form_Version__c/fields/UI_Settings_JSON__c.field-meta.xml
<CustomField>
    <fullName>UI_Settings_JSON__c</fullName>
    <description>Additional UI settings source JSON used in HTML generation.</description>
    <inlineHelpText>Additional UI settings JSON.</inlineHelpText>
    <label>UI Settings JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>