force-app/main/default/objects/NF_Form_Version__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <description>Numeric version number.</description>
    <inlineHelpText>Version number for this form version.</inlineHelpText>
    <label>Version Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>