force-app/main/default/objects/NF_Form_Version__c/listViews/Debug_All_Records.listView-meta.xml
<ListView>
    <fullName>Debug_All_Records</fullName>
    <columns>NAME</columns>
    <columns>Form__c</columns>
    <columns>Form_Id__c</columns>
    <columns>Version_Number__c</columns>
    <columns>Version_Status__c</columns>
    <columns>Publish_Status__c</columns>
    <columns>Publish_Token__c</columns>
    <columns>Security_Mode__c</columns>
    <columns>Rate_Limit_Profile__c</columns>
    <columns>Last_Published_At__c</columns>
    <columns>Last_Published_By__c</columns>
    <columns>Last_Publish_Error__c</columns>
    <filterScope>Everything</filterScope>
    <label>Debug - All Records</label>
</ListView>